--- a/app/src/main/res/layout/fragment_alumni_circle.xml
+++ b/app/src/main/res/layout/fragment_alumni_circle.xml
@@ -17,7 +17,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="@dimen/phone_item_height"
         android:id="@+id/activity_school_friend_input_layout"
         android:visibility="gone"
         android:background="@drawable/input_dialog_bg"
@@ -26,9 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/activity_school_friend_comment_edittext"
-            android:textSize="22sp"
             android:paddingRight="80dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="5dp"
             android:layout_alignParentStart="true"
             android:layout_toStartOf="@+id/activity_school_friend_send_button"
             android:layout_alignParentBottom="true"
@@ -39,20 +38,20 @@
             android:layout_height="42dp"
             android:src="@drawable/ic_menu_emoticons"
             android:id="@+id/activity_school_friend_emotion_img"
-            android:layout_marginBottom="15dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"
             android:layout_toStartOf="@+id/activity_school_friend_send_button"
             android:layout_alignBottom="@+id/activity_school_friend_comment_edittext"
             />
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
             android:background="@drawable/circle_button_bg"
             android:text="@string/send"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:id="@+id/activity_school_friend_send_button"
-            android:textSize="18sp"
+            android:textStyle="bold"
             android:layout_marginBottom="8dp"
             android:layout_alignBottom="@+id/activity_school_friend_comment_edittext"
             android:layout_alignParentEnd="true" />
