--- a/app/src/main/res/layout/fragment_publish_text_with_pics.xml
+++ b/app/src/main/res/layout/fragment_publish_text_with_pics.xml
@@ -237,7 +237,7 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/emotion_pager"
             android:layout_width="match_parent"
-            android:layout_height="380dp"
+            android:layout_height="match_parent"
             />
         <LinearLayout
             android:layout_width="match_parent"
