--- a/app/src/main/res/layout/user_comment.xml
+++ b/app/src/main/res/layout/user_comment.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="160dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="160dp"
     android:paddingTop="10dp"
     android:background="@android:color/black"
     android:paddingBottom="10dp"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:paddingLeft="@dimen/padding_left"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:paddingStart="@dimen/padding_left"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
         android:textColor="@android:color/white"
-        android:paddingRight="@dimen/padding_left"
-        android:text="点赞"
+        android:text="@string/praise"
         android:id="@+id/user_comment_praise_text" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:paddingRight="@dimen/padding_left"
+        android:paddingEnd="@dimen/padding_left"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@android:color/white"
-        android:text="评论"
+        android:text="@string/comment"
         android:id="@+id/user_comment_comment_text" />
-</LinearLayout>
+</RelativeLayout>
