--- a/app/src/main/res/layout/fragment_tu_cao.xml
+++ b/app/src/main/res/layout/fragment_tu_cao.xml
@@ -1,9 +1,26 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.nju.fragment.TuCaoFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.nju.fragment.TuCaoFragment">
+
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
         />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/publish_wei_bo_emotion_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:padding="0dp"
+        android:src="@drawable/d_kun"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom = "10dp"
+        >
+    </android.support.design.widget.FloatingActionButton>
+
 </FrameLayout>
