--- a/app/src/main/res/drawable/publish_content_edittext_bg.xml
+++ b/app/src/main/res/drawable/publish_content_edittext_bg.xml
@@ -2,4 +2,5 @@
 <shape
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke android:color="@android:color/white"/>
 </shape>
