--- a/app/src/main/res/layout/fragment_emotion_pager.xml
+++ b/app/src/main/res/layout/fragment_emotion_pager.xml
@@ -1,18 +1,18 @@
 <FrameLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@android:color/white"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="50dp"
+        android:layout_height="match_parent"
+        android:paddingTop="20dp"
         android:id="@+id/fragment_emotion_pager_gridview"
         android:paddingLeft="@dimen/padding_left"
         android:gravity="center"
         android:horizontalSpacing="@dimen/padding_left"
-        android:verticalSpacing="@dimen/space"
+        android:verticalSpacing="20dp"
         android:paddingRight="@dimen/padding_left"
-        android:numColumns="10"
+        android:numColumns="8"
         />
 </FrameLayout>
