--- a/app/src/main/res/layout/fragment_publish_text.xml
+++ b/app/src/main/res/layout/fragment_publish_text.xml
@@ -1,13 +1,111 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.nju.fragment.PublishTextFragment">
-
-    <EditText
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#F5F5F5"
+    android:id="@+id/publish_text_main_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="@dimen/padding_right"
-        android:layout_marginRight="@dimen/padding_right"
         android:layout_height="wrap_content"
-        android:id="@+id/editText2"
-        android:layout_gravity="center_horizontal" />
-</FrameLayout>
+        android:clickable="true"
+        android:id="@+id/publish_text_scroll_layout"
+        >
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:id="@+id/publish_wei_bo_layout"
+            android:duplicateParentState="true"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:inputType="textMultiLine"
+                android:paddingTop="5dp"
+                android:background="@drawable/publish_content_layout_bg"
+                android:paddingStart="@dimen/phone_apadding"
+                android:paddingEnd="@dimen/phone_apadding"
+                android:hint="@string/time_idea"
+                android:gravity="top"
+                android:id="@+id/publish_content_editText" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/location"
+                    android:paddingTop="@dimen/phone_apadding"
+                    android:paddingBottom="@dimen/phone_apadding"
+                    android:textColor="@android:color/black"
+                    android:paddingStart="@dimen/phone_apadding"
+                    android:background="@android:color/white"
+                    android:id="@+id/publish_userloaction_text"
+                    />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="50dp"
+                android:background="@color/gray"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#cccccc"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/phone_item_height"
+                android:background="@android:color/white"
+                android:id="@+id/fragment_publish_text_who_scan_layout">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/wh0_scan"
+                    android:textColor="@android:color/black"
+                    android:id="@+id/textView2"
+                    android:layout_centerVertical="true"
+                    android:paddingStart="@dimen/phone_apadding"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="@string/school_scan"
+                    android:id="@+id/textView4"
+                    android:paddingRight="@dimen/padding_left"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true" />
+            </RelativeLayout>
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray"
+                />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/phone_item_height"
+                android:background="@android:color/white"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/reminder_who_scan"
+                    android:textColor="@android:color/black"
+                    android:id="@+id/textView5"
+                    android:layout_centerVertical="true"
+                    android:paddingStart="@dimen/phone_apadding"
+                    />
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray"/>
+
+        </LinearLayout>
+    </ScrollView>
+    <include layout="@layout/emotion"/>
+</LinearLayout>
