--- a/app/src/main/res/layout/main_viewpager.xml
+++ b/app/src/main/res/layout/main_viewpager.xml
@@ -29,7 +29,7 @@
                     android:id="@+id/main_viewpager_camera_imageView"
                     />
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_width="75dp"
                     android:layout_height="40dp"
                     android:background="@drawable/circle_button_bg"
                     android:layout_gravity="end"
