--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -4,24 +4,29 @@
 
     >
 
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
         android:id="@+id/textView8"
-        android:paddingStart="@dimen/padding_left"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
+        android:text="New Text"
         android:id="@+id/textView9"
-        android:paddingEnd="@dimen/padding_left"
         android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_toEndOf="@+id/textView8" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView10"
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/textView8"
+        android:layout_marginTop="128dp" />
 </RelativeLayout>
