--- a/app/src/main/res/layout/who_scan_group.xml
+++ b/app/src/main/res/layout/who_scan_group.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="@dimen/item_height"
+    android:layout_height="@dimen/phone_item_height"
     android:background="@android:color/white"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:paddingLeft="@dimen/padding_left"
+        android:paddingLeft="@dimen/phone_apadding"
         android:orientation="vertical"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@android:color/black"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/who_scan_group_item_big_label"
              />
 
@@ -31,7 +32,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/who_scan_group_img"
         android:layout_centerVertical="true"
-        android:paddingRight="@dimen/padding_right"
+        android:paddingRight="@dimen/phone_apadding"
         android:layout_alignParentEnd="true"
         />
 
