--- a/app/src/main/res/layout/fragment_publish_text_with_pics.xml
+++ b/app/src/main/res/layout/fragment_publish_text_with_pics.xml
@@ -15,136 +15,39 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:id="@+id/publish_wei_bo_layout"
-            android:background="@drawable/publish_content_layout_bg"
             android:duplicateParentState="true"
+            android:background="@drawable/publish_content_edittext_bg"
             android:layout_height="wrap_content">
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
+                android:background="@drawable/publish_content_layout_bg"
                 android:inputType="textMultiLine"
                 android:paddingTop="5dp"
                 android:paddingStart="@dimen/phone_apadding"
                 android:paddingEnd="@dimen/phone_apadding"
                 android:hint="@string/time_idea"
                 android:gravity="top"
-                android:background="@drawable/publish_content_edittext_bg"
                 android:minLines="5"
                 android:id="@+id/publish_wei_bo_content_editText" />
-            <LinearLayout
-                android:orientation="vertical"
-                android:id="@+id/activity_publish_weibo_image_layout"
-                android:layout_width="match_parent"
-                android:paddingStart="@dimen/phone_apadding"
-                android:paddingEnd="@dimen/phone_apadding"
-                android:layout_height="wrap_content">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:id="@+id/activity_publish_weibo_image_im1"
-                        android:layout_height="wrap_content"
-                        android:paddingEnd="@dimen/phone_apadding"
-                        android:scaleType="fitXY"
-                        android:layout_weight="1"
-                        />
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:id="@+id/activity_publish_weibo_image_im2"
-                        android:layout_height="wrap_content"
-                        android:paddingEnd="@dimen/phone_apadding"
-                        android:scaleType="fitXY"
-                        android:layout_weight="1"
-                        />
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:id="@+id/activity_publish_weibo_image_im3"
-                        android:layout_height="wrap_content"
-                        android:scaleType="fitXY"
-                        android:layout_weight="1"
-                        />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:id="@+id/activity_publish_weibo_image_im4"
-                        android:layout_height="wrap_content"
-                        android:paddingEnd="@dimen/phone_apadding"
-                        android:scaleType="fitXY"
-                        android:layout_weight="1"
-                        />
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:id="@+id/activity_publish_weibo_image_im5"
-                        android:layout_height="wrap_content"
-                        android:paddingEnd="@dimen/phone_apadding"
-                        android:scaleType="fitXY"
-                        android:layout_weight="1"
-                        />
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:id="@+id/activity_publish_weibo_image_im6"
-                        android:layout_height="wrap_content"
-                        android:scaleType="fitXY"
-                        android:layout_weight="1"
-                        />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:id="@+id/activity_publish_weibo_image_im7"
-                        android:layout_height="wrap_content"
-                        android:scaleType="fitXY"
-                        android:paddingEnd="@dimen/phone_apadding"
-                        android:layout_weight="1"
-                        />
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:id="@+id/activity_publish_weibo_image_im8"
-                        android:layout_height="wrap_content"
-                        android:scaleType="fitXY"
-                        android:paddingEnd="@dimen/phone_apadding"
-                        android:layout_weight="1"
-                        />
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:id="@+id/activity_publish_weibo_image_im9"
-                        android:layout_height="wrap_content"
-                        android:scaleType="fitXY"
-                        android:layout_weight="1"
-                        />
-                </LinearLayout>
-            </LinearLayout>
-            <RelativeLayout
+            <include layout="@layout/multi_choosed_image"/>
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/phone_apadding"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="@string/location"
-                    android:paddingTop="@dimen/phone_apadding"
-                    android:textColor="@android:color/black"
-                    android:paddingStart="@dimen/phone_apadding"
-                    android:id="@+id/publish_wei_bo_userloaction_text"
-                    android:layout_centerVertical="true"
-                    />
-            </RelativeLayout>
+                android:background="@drawable/publish_content_layout_bg"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/location"
+                android:paddingTop="@dimen/phone_apadding"
+                android:textColor="@android:color/black"
+                android:paddingStart="@dimen/phone_apadding"
+                android:paddingBottom="@dimen/phone_apadding"
+                android:id="@+id/publish_wei_bo_userloaction_text"
+                />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
+                android:layout_marginBottom="50dp"
                 android:background="@color/gray"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="#F5F5F5"
-                />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -208,67 +111,6 @@
         </LinearLayout>
 
     </ScrollView>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/publish_wei_bo_emto_layout"
-        android:visibility="gone"
-
-        android:clickable="false"
-        android:orientation="vertical"
-        >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="50dp">
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#cccccc"/>
-            <ImageView
-                android:id="@+id/publish_wei_bo_emotion_fab"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_gravity="center_horizontal|left"
-                android:padding="0dp"
-                android:layout_marginStart="16dp"
-                android:src="@mipmap/ic_menu_emoticons" />
-        </LinearLayout>
-        <android.support.v4.view.ViewPager
-            android:id="@+id/emotion_pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white"
-            android:gravity="top|center"
-            android:orientation="horizontal"
-            >
-            <View
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:id="@+id/emotion_pager_view1"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/select_circle_label_bg"
-                />
-
-            <View
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:id="@+id/emotion_pager_view2"
-                android:background="@drawable/unselect_circle_label_bg"
-                android:layout_marginStart="16dp"
-                />
-            <View
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:id="@+id/emotion_pager_view3"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/unselect_circle_label_bg"
-                />
-        </LinearLayout>
-    </LinearLayout>
+   <include layout="@layout/emotion"/>
 
 </LinearLayout>
