--- a/app/src/main/res/layout/fragment_choosed_origin_pic_view_page_item.xml
+++ b/app/src/main/res/layout/fragment_choosed_origin_pic_view_page_item.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="matrix"
+        android:clickable="true"
         android:id="@+id/fragment_choosed_origin_pic_view_page_item_imageView"
         />
 </LinearLayout>
