--- a/app/src/main/res/layout/fragment_person_circle.xml
+++ b/app/src/main/res/layout/fragment_person_circle.xml
@@ -1,9 +1,20 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.nju.fragment.PersonCircleFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@android:color/white"
+    android:layout_height="match_parent"
+    tools:context="com.nju.fragment.PersonCircleFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/phone_apadding"
+        android:id="@+id/fragment_person_circle_listview"
+        android:paddingStart="@dimen/phone_apadding"
+        android:listSelector="@android:color/transparent"
+        android:paddingEnd="@dimen/phone_apadding"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10dp"
+         />
 </FrameLayout>
