--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:background="?attr/colorPrimaryDark"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    android:orientation="vertical"
-    android:gravity="bottom">
-
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    >
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
         android:id="@+id/nav_header_username"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        />
 
-</LinearLayout>
+
+</RelativeLayout>
