add apple font and awesome font

--- a/app/src/main/res/layout/emotion.xml
+++ b/app/src/main/res/layout/emotion.xml
@@ -10,19 +10,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
+        android:background="@drawable/gray_line_bg"
+        android:gravity="start|center_vertical"
         android:layout_height="50dp">
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#cccccc"/>
-        <ImageView
+        <com.nju.View.SchoolFriendAweTextView
             android:id="@+id/emotion_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_gravity="center_horizontal|start"
-            android:padding="0dp"
-            android:layout_marginStart="16dp"
-            android:src="@mipmap/ic_menu_emoticons" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="36sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="@string/smile"
+            android:paddingStart="@dimen/phone_apadding"
+            />
     </LinearLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/emotion_pager"
