--- a/app/src/main/res/layout/emotion_adapter_item.xml
+++ b/app/src/main/res/layout/emotion_adapter_item.xml
@@ -4,4 +4,5 @@
     android:layout_width="wrap_content"
     android:background="@android:color/white"
     android:textSize="22sp"
+    android:textColor="@android:color/black"
     xmlns:android="http://schemas.android.com/apk/res/android" />
