--- a/app/src/main/res/layout/fragment_alumni_circle.xml
+++ b/app/src/main/res/layout/fragment_alumni_circle.xml
@@ -23,26 +23,38 @@
         android:background="@drawable/input_dialog_bg"
         >
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="@dimen/phone_apadding"
+            android:background="@android:color/transparent"
             android:id="@+id/activity_school_friend_comment_edittext"
-            android:paddingRight="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_alignParentStart="true"
-            android:layout_toStartOf="@+id/activity_school_friend_send_button"
-            android:layout_alignParentBottom="true"
+            android:layout_alignBottom="@+id/fragment_alumni_circle_emotion"
+            android:layout_toStartOf="@+id/fragment_alumni_circle_emotion"
             />
 
-        <ImageView
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:src="@drawable/ic_menu_emoticons"
-            android:id="@+id/activity_school_friend_emotion_img"
-            android:layout_marginBottom="10dp"
+        <com.nju.View.SchoolFriendAweTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxHeight="40dp"
+            android:gravity="top"
             android:layout_marginRight="10dp"
+            android:textSize="36sp"
+            android:id="@+id/fragment_alumni_circle_emotion"
+            android:layout_marginBottom="5dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="@string/smile"
+            android:layout_alignBottom="@+id/activity_school_friend_send_button"
             android:layout_toStartOf="@+id/activity_school_friend_send_button"
-            android:layout_alignBottom="@+id/activity_school_friend_comment_edittext"
+
             />
+        <View
+            android:layout_width="match_parent"
+            android:layout_below="@+id/activity_school_friend_send_button"
+            android:background="@color/colorPrimaryDark"
+            android:layout_marginBottom="8dp"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/activity_school_friend_send_button"
+            android:layout_height="2dp"/>
         <Button
             android:layout_width="60dp"
             android:layout_height="40dp"
@@ -52,8 +64,7 @@
             android:layout_marginRight="10dp"
             android:id="@+id/activity_school_friend_send_button"
             android:textStyle="bold"
-            android:layout_marginBottom="8dp"
-            android:layout_alignBottom="@+id/activity_school_friend_comment_edittext"
+            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true" />
     </RelativeLayout>
 </LinearLayout>
