--- a/app/src/main/res/layout/fragment_user_info_listview_header.xml
+++ b/app/src/main/res/layout/fragment_user_info_listview_header.xml
@@ -1,13 +1,11 @@
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#F5F5F5"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/phone_item_height"
-        android:background="@drawable/gray_line_bg"
+        android:background="@android:color/white"
         android:paddingLeft="@dimen/phone_apadding"
         android:paddingRight="@dimen/phone_apadding"
         >
@@ -16,6 +14,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/user_name"
+            android:textColor="@android:color/black"
             android:id="@+id/textView"
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true" />
@@ -24,15 +23,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/fragment_user_info_fragement_name_text"
+            android:id="@+id/fragment_user_info_listview_name_tv"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true" />
     </RelativeLayout>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#F5F5F5"
+        />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/phone_item_height"
-        android:background="@drawable/gray_line_bg"
+        android:background="@android:color/white"
         android:paddingLeft="@dimen/phone_apadding"
         android:paddingRight="@dimen/phone_apadding"
         >
@@ -42,6 +45,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/sex"
+            android:textColor="@android:color/black"
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true" />
 
@@ -49,14 +53,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/fragment_user_info_fragement_sex_text"
+            android:id="@+id/fragment_user_info_listview_sex_tv"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true" />
     </RelativeLayout>
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/fragment_user_info_fragement_list"
-        />
 </LinearLayout>
-
