--- a/app/src/main/res/layout/fragment_xue_xin_auth.xml
+++ b/app/src/main/res/layout/fragment_xue_xin_auth.xml
@@ -7,7 +7,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="20dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@android:color/holo_red_light"
             android:id="@+id/fragment_xue_xin_tip_textView" />
@@ -42,6 +42,35 @@
                 android:inputType="textPassword"
                 android:hint="密码" />
         </android.support.design.widget.TextInputLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:visibility="gone"
+        android:id="@+id/fragment_xue_xin_captcha_layout"
+         android:layout_height="wrap_content">
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/password_text_input_captcha"
+            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:layout_alignParentStart="true"
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/etCaptcha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:ems="10"
+                android:hint="@string/captcha" />
+        </android.support.design.widget.TextInputLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:foreground="@color/colorPrimaryDark"
+            android:layout_toEndOf="@+id/password_text_input_captcha"
+            android:id="@+id/fragment_xue_xin_auth_image"
+            />
+    </RelativeLayout>
 
         <Button
             android:layout_width="wrap_content"
