--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -7,39 +7,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        android:id="@+id/button"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:background="@color/colorPrimaryDark"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
         android:id="@+id/textView8"
-        android:layout_alignBottom="@+id/button"
+        android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
 
-    <CheckBox
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:id="@+id/checkBox2"
-        android:layout_toStartOf="@+id/button"
-        android:layout_above="@+id/textView8" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText2"
-        android:background="@android:color/holo_blue_light"
-        android:layout_alignBottom="@+id/checkBox2"
-        android:layout_toStartOf="@+id/checkBox2" />
-
-
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/textView9"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/textView8" />
 </RelativeLayout>
