--- a/app/src/main/res/layout/fragment_person_circle_item.xml
+++ b/app/src/main/res/layout/fragment_person_circle_item.xml
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
              >
-            <TextView
+            <com.nju.View.SchoolFriendTextView
                 android:id="@+id/fragment_person_circle_item_content_tv"
                 android:layout_width="match_parent"
                 android:background="#eee"
