--- a/app/src/main/res/layout/fragment_person_circle_item.xml
+++ b/app/src/main/res/layout/fragment_person_circle_item.xml
@@ -12,7 +12,7 @@
             android:id="@+id/fragment_person_circle_item_daytv"
             android:layout_width="wrap_content"
             android:gravity="top"
-            android:layout_marginTop="-10dp"
+            android:includeFontPadding="false"
             android:textStyle="bold"
             android:textSize="32sp"
             android:textColor="@android:color/black"
@@ -25,6 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_alignBottom="@+id/fragment_person_circle_item_daytv"
             android:textStyle="bold"
+            android:includeFontPadding="false"
             android:textColor="@android:color/black"
             android:layout_toEndOf="@+id/fragment_person_circle_item_daytv"
             android:layout_height="wrap_content" />
@@ -34,23 +35,25 @@
         android:layout_weight="3"
         android:layout_height="wrap_content"
          >
-        <ImageView
-            android:id="@+id/fragment_person_circle_item_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-             />
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
              >
+            <ImageView
+                android:id="@+id/fragment_person_circle_item_image"
+                android:layout_width="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:layout_height="wrap_content" />
             <com.nju.View.SchoolFriendTextView
                 android:id="@+id/fragment_person_circle_item_content_tv"
                 android:layout_width="match_parent"
-                android:background="#eee"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
+                android:layout_alignTop="@+id/fragment_person_circle_item_image"
+                android:layout_toEndOf="@+id/fragment_person_circle_item_image"
                 />
             <TextView
                 android:id="@+id/fragment_person_circle_pic_item_nuber_tv"
