--- a/app/src/main/res/layout/school_friend_item.xml
+++ b/app/src/main/res/layout/school_friend_item.xml
@@ -147,6 +147,16 @@
             android:layout_gravity="right"
             android:src="@drawable/ic_menu_compose"
             />
+        <!--<com.nju.View.SchoolFriendAweTextView-->
+            <!--android:layout_width="32dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/comment_icon"-->
+            <!--android:textSize="28sp"-->
+            <!--android:textColor="@android:color/holo_blue_dark"-->
+            <!--android:layout_marginTop="-32dp"-->
+            <!--android:id="@+id/school_friend_item_com_img"-->
+            <!--android:layout_gravity="end"-->
+            <!--/>-->
         <com.nju.View.NonScrollableListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
