--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,23 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:layout_height="match_parent"
+    android:layout_height="100dp"
     android:layout_width="match_parent"
+    android:background="@android:color/black"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <TextView
+    <com.nju.View.SchoolFriendTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="@dimen/phone_apadding"
+        android:text="@string/praise_icon"
+        android:textColor="@android:color/white"
         android:id="@+id/textView8"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <Button
+        android:textStyle="bold"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_below="@+id/textView8"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerVertical="true"
+        android:text="赞"
+        android:id="@+id/text"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/white"
+        android:layout_toRightOf="@+id/textView8"
+        />
+
+    <com.nju.View.SchoolFriendTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="@dimen/phone_apadding"
+        android:text="@string/comment_icon"
+        android:textColor="@android:color/white"
+        android:id="@+id/textView9"
+        android:layout_toRightOf="@+id/text"
+        android:textStyle="bold"
+        android:layout_centerVertical="true"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:text="评论"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/white"
+        android:layout_toRightOf="@+id/textView9"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="评论"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/white"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        />
 </RelativeLayout>
