--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="primay">#00897B</color>
     <color name="primayDark">#00796B</color>
     <color name="test">#16777261</color>
+    <color name="light_gray">#eee</color>
 </resources>
