--- a/app/src/main/res/values/icons.xml
+++ b/app/src/main/res/values/icons.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="smile">&#xf118;</string>
     <string name="keyboard">&#xf11c;</string>
+    <string name="comment_icon">&#xf086;</string>
+    <string name="praise_icon">&#xf164;</string>
 </resources>
