--- a/app/src/main/res/layout/user_location_item.xml
+++ b/app/src/main/res/layout/user_location_item.xml
@@ -21,16 +21,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:includeFontPadding="false"
             android:id="@+id/user_location_item_address"
             />
     </LinearLayout>
-
-    <ImageView
+    <com.nju.View.SchoolFriendAweTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/user_location_item_image"
         android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:textSize="26sp"
+        android:textColor="@color/colorPrimaryDark"
+        />
+
 </RelativeLayout>
 
 
