--- a/app/src/main/res/layout/who_scan_group.xml
+++ b/app/src/main/res/layout/who_scan_group.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:paddingLeft="@dimen/phone_apadding"
+        android:paddingStart="@dimen/phone_apadding"
         android:orientation="vertical"
         android:layout_height="wrap_content">
         <TextView
@@ -27,13 +27,14 @@
             />
     </LinearLayout>
 
-    <ImageView
+    <com.nju.View.SchoolFriendAweTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/who_scan_group_img"
         android:layout_centerVertical="true"
-        android:paddingRight="@dimen/phone_apadding"
+        android:paddingEnd="@dimen/phone_apadding"
         android:layout_alignParentEnd="true"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="26sp"
         />
-
 </RelativeLayout>
