--- a/app/src/main/res/layout-xlarge-land/fragment_choosed_origin_pic_view_page_item.xml
+++ b/app/src/main/res/layout-xlarge-land/fragment_choosed_origin_pic_view_page_item.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:background="@color/black100"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <com.nju.View.CustomImageView
+    <com.nju.View.CustomImageVIew
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="matrix"
