--- a/app/src/main/res/layout/fragment_tu_cao.xml
+++ b/app/src/main/res/layout/fragment_tu_cao.xml
@@ -1,26 +1,41 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nju.fragment.TuCaoFragment">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v4.view.ViewPager
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white"
-        />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/publish_wei_bo_emotion_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:padding="0dp"
-        android:src="@drawable/d_kun"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom = "10dp"
+        android:layout_alignParentTop="true"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         >
-    </android.support.design.widget.FloatingActionButton>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/fragment_alumni_voice_viewpage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/white"
+            />
 
-</FrameLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/publish_wei_bo_emotion_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+
+            android:padding="0dp"
+            android:alpha="0.5"
+            app:backgroundTint="@color/gray"
+            android:src="@drawable/gray_big_circle"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom = "70dp"
+            >
+        </android.support.design.widget.FloatingActionButton>
+    </FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:layout_height="60dp">
+
+    </LinearLayout>
+</RelativeLayout>
