--- a/app/src/main/res/drawable/gray_big_circle.xml
+++ b/app/src/main/res/drawable/gray_big_circle.xml
@@ -3,7 +3,6 @@
     android:shape="oval"
 
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="1px" android:color="@android:color/darker_gray"/>
     <size android:height="60dp" android:width="60dp"/>
-    <solid android:color="@android:color/darker_gray"/>
+    <solid android:color="#EEEEEE"/>
 </shape>
