--- a/app/src/main/res/layout/fragment_recommend_work.xml
+++ b/app/src/main/res/layout/fragment_recommend_work.xml
@@ -1,11 +1,17 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:background="@android:color/white"
-    android:layout_height="match_parent" tools:context="com.nju.fragment.RecommendWorkFragment">
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/fragment_recommed_work_viewpage"
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-</FrameLayout>
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true">
+        <android.support.v4.view.ViewPager
+            android:id="@+id/fragment_recommed_work_viewpage"
+            android:layout_width="match_parent"
+            android:background="@android:color/white"
+            android:layout_height="match_parent"/>
+        <include layout="@layout/hand_touch_bn"/>
+    </FrameLayout>
+    <include layout="@layout/college_choose_dialog_level"/>
+</RelativeLayout>
